--- a/ia/deepLearning.html
+++ b/ia/deepLearning.html
@@ -70,7 +70,7 @@
                     <li>Backpropagation: Es el algoritmo que se utiliza para ajustar los pesos (parámetros) de las conexiones en una red neuronal durante el entrenamiento.</li>
                 </ul>
                 <h2>Diferencia entre Machine Learning y Deep Learning</h2>
-                <p>La principal diferencia entre Machine Learning (Aprendizaje Automático) y Deep Learning (Aprendizaje Profundo) radica en su estructura y alcance dentro del campo de la inteligencia artificial.</p>
+                <p>La principal diferencia entre Machine Learning y Deep Learning radica en su estructura y alcance dentro del campo de la inteligencia artificial.</p>
                 <br>
                 <ul style="list-style-type: square;">
                     <li>Machine Learning (Aprendizaje Automático):</li>
