--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -545,6 +545,7 @@
                 </div>
 
                 <ol>
+                <p>Existen tres roles dentro de Linux que son útiles para poder administrar el sistema y los archivos que se encuentran dentro, tales como son:</p>
                   <li>Root (Superusuario):</li>
                     <ul>
                       <li>En Linux, "root" es el usuario con el máximo nivel de privilegios en el sistema, también conocido como el superusuario.</li>
@@ -648,7 +649,7 @@
 
                 <p>Por favor, ten en cuenta que cambiar los permisos incorrectamente podría afectar el funcionamiento normal de los archivos y directorios, así que asegúrate de saber lo que estás haciendo antes de utilizar chmod. Siempre es recomendable tener cuidado al cambiar los permisos en el sistema.</p>
 
-                <br>                    
+                <h2>Conclusión</h2>                    
                 <p>Si bien las interfaces gráficas son más accesibles para usuarios no técnicos, aprender la CLI es una habilidad valiosa para aquellos que desean profundizar en el funcionamiento interno de los sistemas y maximizar su productividad. A través de la práctica y la familiarización con los comandos más comunes, los usuarios pueden adquirir confianza y aprovechar al máximo el potencial de la línea de comandos.</p>
                 <p>En resumen, la CLI es una herramienta imprescindible para cualquier entusiasta de la tecnología, desarrollador o profesional de la informática que busque mejorar su eficiencia y conocimientos en el manejo de sistemas operativos y aplicaciones. A medida que se avanza en el dominio de la línea de comandos, se descubre un mundo de posibilidades y se adquiere una valiosa habilidad que puede marcar la diferencia en el ámbito tecnológico.</p>
                 <div class="blog-image">
