--- a/hacking/linux.html
+++ b/hacking/linux.html
@@ -519,7 +519,7 @@
                     Mata un proceso que no se quiera cerrar, por ejemplo, Chrome.
                   </div>
                   <div class="comandos">
-                    <input type="text" class="text" value="pkill Nombre del Proceso" oninput="ajustarAncho(this)">
+                    <input type="text" class="text" value="pkill 'Nombre del Proceso'" oninput="ajustarAncho(this)">
                     <button><i class="fa fa-clone"></i><span> Copy</span></button>
                   </div>
                 </div>
