--- a/ia.html
+++ b/ia.html
@@ -49,7 +49,11 @@
             <img src="media/imagen3.png" alt="Deep Learning" class="article-image">
             <h2><a href="ia/deepLearning.html">Deep Learning</a></h2>
         </div>
-        <!-- Segundo artículo -->
+        <div class="article-section">
+            <img src="media/imagen3.png" alt="Algoritmos de Machine Learning" class="article-image">
+            <h2><a href="ia/algoritmos.html">Algoritmos de Machine Learning</a></h2>
+        </div>
+        <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen3.png" alt="En proceso" class="article-image">
             <h2><a href="ia/unknown.html">En proceso</a></h2>
