--- a/network.html
+++ b/network.html
@@ -56,7 +56,11 @@
         <div class="article-section">
             <img src="media/imagen2.png" alt="HTTP" class="article-image">
             <h2><a href="network/http.html">HTTP</a></h2>
-        </div>        
+        </div>    
+        <div class="article-section">
+            <img src="media/imagen2.png" alt="Telnet y SSH" class="article-image">
+            <h2><a href="network/ssh.html">Telnet y SSH</a></h2>
+        </div>     
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen2.png" alt="En proceso" class="article-image">
