--- a/electronica.html
+++ b/electronica.html
@@ -53,6 +53,10 @@
             <img src="media/imagen1.png" alt="Inductor" class="article-image">
             <h2><a href="electronica/inductancia.html">Inductor</a></h2>
         </div>
+        <div class="article-section">
+            <img src="media/imagen1.png" alt="Cálculo básico de componentes electrónicos" class="article-image">
+            <h2><a href="electronica/calculo.html">Cálculo básico de componentes electrónicos</a></h2>
+        </div> 
         <!-- Nuevo artículo -->
         <div class="article-section">
             <img src="media/imagen1.png" alt="En proceso" class="article-image">
