--- a/network.html
+++ b/network.html
@@ -58,6 +58,10 @@
             <h2><a href="network/http.html">HTTP</a></h2>
         </div>    
         <div class="article-section">
+            <img src="media/imagen2.png" alt="HTTPS" class="article-image">
+            <h2><a href="network/https.html">HTTPS</a></h2>
+        </div> 
+        <div class="article-section">
             <img src="media/imagen2.png" alt="Telnet y SSH" class="article-image">
             <h2><a href="network/ssh.html">Telnet y SSH</a></h2>
         </div>     
